# GWRForge

./: .gitignore  README.md  README.zh.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
configs/: full.json  pilot.json
reports/: EXECUTION_STATUS.md  IMPLEMENTATION_AUDIT.md  METHODS_AND_EXPERIMENT_PLAN.md
results/formal/: FORMAL_STAGE_001.zh.md  FORMAL_STAGE_002.zh.md  FORMAL_STAGE_003.zh.md  FORMAL_STAGE_004.zh.md  FORMAL_STAGE_005.zh.md  fitting_stage003.csv  fitting_stage004.csv  formal_key_results_stage001.csv  formal_summary_stage002.csv  gr_real_fitting_stage005.csv
scripts/: 00_environment_check.py  01_correctness.py  02_lg_simulation.py  03_gr_simulation.py  04_real_data.py  05_report.py  06_parameter_selection.py  07_ablation.py  08_benchmark.py  09_statistics.py  10_figures.py  _bootstrap.py  run_pipeline.py
src/pygwrx_experiments/: __init__.py  config.py  correctness.py  extended.py  figures.py  io_utils.py  metrics.py  models.py  reporting.py  runners.py  simulations.py
tests/: test_config.py  test_simulations.py
