[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gwrforge-experiments"
version = "0.1.0"
description = "Reproducible experiments and benchmarks for LG-GWR and GR-GWR built on pyGWRx"
requires-python = ">=3.11"
authors = [{name = "Jinghao Hu"}]
dependencies = [
  "numpy>=1.25.2",
  "scipy>=1.11.4",
  "pandas>=2.0.3",
  "matplotlib>=3.7.2",
  "geopandas>=0.14.4",
  "shapely>=2.0.2",
  "scikit-learn>=1.3.2",
]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
